--- a/index.html
+++ b/index.html
@@ -10,41 +10,36 @@
 </head>
 <body>
     <div class="container">
-        <div id="display">Display</div>
+        <div id="display-container">
+        </div>
         <div class="buttons">
             <div id="numbers" class="first-column">
-                <div class="place-holder">
-                    <div class="holder">(</div>
-                    <div class="holder">)</div>
-                    <div class="holder">%</div>
-                </div>
                 <div id="row" class="first-row">
-                    <div id="seven" class="number">7</div>
-                    <div id="eight" class="number">8</div>
-                    <div id="nine" class="number">9</div>
+                    <div id="seven" class="number button">7</div>
+                    <div id="eight" class="number button">8</div>
+                    <div id="nine" class="number button">9</div>
                 </div>
                 <div id="row" class="second-row">
-                    <div id="four" class="number">4</div>
-                    <div id="five" class="number">5</div>
-                    <div id="six" class="number">6</div>
+                    <div id="four" class="number button">4</div>
+                    <div id="five" class="number button">5</div>
+                    <div id="six" class="number button">6</div>
                 </div>
                 <div id="row" class="third-row">
-                    <div id="one" class="number">1</div>
-                    <div id="two" class="number">2</div>
-                    <div id="trhee" class="number">3</div>
+                    <div id="one" class="number button">1</div>
+                    <div id="two" class="number button">2</div>
+                    <div id="trhee" class="number button">3</div>
                 </div>
                 <div id="row" class="fourth-row">
-                    <div id="zero" class="number">0</div>
-                    <div id="point" class="number">.</div>
-                    <div id="equals" class="number">=</div>
+                    <div id="clear" class="operator button">Clear</div>
+                    <div id="zero" class="number button">0</div>
+                    <div id="equals" class="operator button">=</div>
                 </div>
             </div>
             <div id="operators" class="second-column">
-                <div id="clear" class="operator">Clear</div>
-                <div id="div" class="operator">/</div>
-                <div id="mul" class="operator">*</div>
-                <div id="sub" class="operator">-</div>
-                <div id="add" class="operator">+</div>
+                <div id="div" class="operator button">/</div>
+                <div id="mul" class="operator button">*</div>
+                <div id="sub" class="operator button">-</div>
+                <div id="add" class="operator button">+</div>
             </div>
         </div>
     </div>
