Finish the scrip logic Cleaning and remake some content

--- a/index.html
+++ b/index.html
@@ -10,36 +10,38 @@
 </head>
 <body>
     <div class="container">
-        <div id="display-container">
+        <div id="display-container">   
+            <div class="previous"></div>
+            <div class="current"></div>
         </div>
         <div class="buttons">
-            <div id="numbers" class="first-column">
-                <div id="row" class="first-row">
-                    <div id="seven" class="number button">7</div>
-                    <div id="eight" class="number button">8</div>
-                    <div id="nine" class="number button">9</div>
+            <div id="numbers">
+                <div id="row">
+                    <div class="number button">7</div>
+                    <div class="number button">8</div>
+                    <div class="number button">9</div>
                 </div>
-                <div id="row" class="second-row">
-                    <div id="four" class="number button">4</div>
-                    <div id="five" class="number button">5</div>
-                    <div id="six" class="number button">6</div>
+                <div id="row">
+                    <div class="number button">4</div>
+                    <div class="number button">5</div>
+                    <div class="number button">6</div>
                 </div>
-                <div id="row" class="third-row">
-                    <div id="one" class="number button">1</div>
-                    <div id="two" class="number button">2</div>
-                    <div id="trhee" class="number button">3</div>
+                <div id="row">
+                    <div class="number button">1</div>
+                    <div class="number button">2</div>
+                    <div class="number button">3</div>
                 </div>
-                <div id="row" class="fourth-row">
-                    <div id="clear" class="operator button">Clear</div>
-                    <div id="zero" class="number button">0</div>
-                    <div id="equals" class="operator button">=</div>
+                <div id="row">
+                    <div class="clear button">C</div>
+                    <div class="number button">0</div>
+                    <div class="equals button">=</div>
                 </div>
             </div>
-            <div id="operators" class="second-column">
-                <div id="div" class="operator button">/</div>
-                <div id="mul" class="operator button">*</div>
-                <div id="sub" class="operator button">-</div>
-                <div id="add" class="operator button">+</div>
+            <div id="operators">
+                <div class="operator button">/</div>
+                <div class="operator button">*</div>
+                <div class="operator button">-</div>
+                <div class="operator button">+</div>
             </div>
         </div>
     </div>
